--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,30 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Содержат личные данные
+backups/*
+cookies_autoru/*
+cookies_mailru/*
+cookies_yandex/*
+extensions/
+
+combined.txt
+combined_mailru.txt
+combined.xlsx
+combined_mailru.xlsx
+lnk.txt
+lnk.xlsx
+
+config.txt
+
+# Не нужны для работы проекта
+for_test.py
+old_archive.py
+stealth init driver.py
+test_output.txt
+test.py
+text.txt
+
+vosk-model-en-us-0.22-lgraph/
+vosk-model-small-en-us-0.15
